fixed JP caption position absolute to display correctly on safari

--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -322,6 +322,7 @@ article.about{
 			padding-bottom: 3px;
 			color: $white;
 			bottom: 0;
+			left:0;
 			background: rgba(0,0,0, 0.5);
 			text-align: center;
 			font-style: oblique;
